--- a/scss/style.scss
+++ b/scss/style.scss
@@ -39,12 +39,10 @@ main {
     align-items: center;
 
     .arrow {
-      height: 40px;
+      height: 35px;
       width: 60px;
       margin-right: 0.5rem;
-
-      background: linear-gradient(90deg, rgb(255, 182, 46) 0%, #ffff00 100%);
-      box-shadow: 0 0 80px orange;
+      background-color: red;
 
       clip-path: polygon(
         0% 20%,
@@ -56,17 +54,6 @@ main {
         0% 80%
       );
       transition: animation 4s;
-    }
-    @keyframes win1 {
-      0% {
-        background: linear-gradient(90deg, rgb(255, 182, 46) 0%, yellow 100%);
-        box-shadow: 0 0 80px orange;
-      }
-
-      100% {
-        background: linear-gradient(-90deg, rgb(255, 182, 46) 0%, yellow 100%);
-        box-shadow: 0 0 80px orange;
-      }
     }
 
     .slots {
@@ -354,7 +341,7 @@ main {
       p {
         font-family: Ticketing;
         color: rgb(48, 48, 48);
-        font-size: 1.5rem;
+        font-size: 1.4rem;
         text-align: center;
         max-width: 250px;
       }
@@ -514,9 +501,9 @@ section {
         }
         & div input:focus {
           color: #080808;
-          outline: none;
+          outline: 2px solid rgba(128, 128, 128, 0.5);
           background-color: rgb(223, 222, 222);
-          transition: all 0.5s;
+          transition: background-color 0.5s;
         }
 
         & div .plus {
