--- a/scss/style.scss
+++ b/scss/style.scss
@@ -542,6 +542,28 @@ section {
       opacity: 1;
       transition: opacity 0.3s ease-in-out 0.5s, visibility 0.3s ease-in 0.5s;
     }
+    .save-container {
+      margin: 0;
+      padding: 0;
+      display: inline-flex;
+      align-items: center;
+      gap: 0.8rem;
+    }
+    .save-container img {
+      padding-top: 0.5rem;
+      width: 0;
+    }
+    @keyframes save {
+      0% {
+        width: 0.5rem;
+      }
+      50% {
+        width: 1.5rem;
+      }
+      100% {
+        width: 0;
+      }
+    }
   }
   aside.active {
     height: 100vh;
