--- a/scss/style.scss
+++ b/scss/style.scss
@@ -8,6 +8,9 @@ $font_questions: Ticketing;
   font-family: Ticketing;
   src: url(./../fonts/Ticketing.ttf);
 }
+html {
+  background-color: #03254c;
+}
 body {
   margin: 0;
   width: 100%;
@@ -577,5 +580,178 @@ section {
   }
   aside.names.active {
     width: 60vw;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  section {
+    aside {
+      width: 70px;
+      min-height: 90px;
+
+      .menu__icon.names img {
+        margin: 2rem 0 0 1.3rem;
+        width: 2.5rem;
+      }
+      .menu__icon.questions img {
+        margin: 1.5rem 1.5rem 0 0;
+        width: 1.8rem;
+      }
+
+      & form {
+        & h2 {
+          font-size: 1.8rem;
+        }
+        & .input-list {
+          flex-wrap: nowrap;
+
+          & div input {
+            font-size: 0.8rem;
+          }
+        }
+      }
+      & form.active {
+        height: 100%;
+        margin: 2rem 0rem;
+      }
+    }
+    aside.active {
+      height: max-content;
+    }
+    aside.questions.active {
+      position: absolute;
+      width: 85vw;
+      z-index: 100000;
+    }
+    aside.names.active {
+      width: 85vw;
+      z-index: 10000;
+      position: absolute;
+    }
+  }
+  @media screen and (max-width: 650px) {
+    $icon_width: 50px;
+    $icon_height: 70px;
+    main {
+      padding-top: 6rem;
+      .top {
+        .arrow {
+          height: 30px;
+          width: 45px;
+        }
+
+        .slots {
+          width: 230px;
+          height: 210px;
+          .reel {
+            width: 240px;
+            height: 3 * $icon_height;
+
+            .slider {
+              .card {
+                height: $icon_height;
+                width: 100%;
+
+                &__text {
+                  font-size: 20px;
+                }
+              }
+            }
+          }
+        }
+
+        .ruleman {
+          height: 35px;
+          width: 10px;
+        }
+
+        .start {
+          &__ball {
+            height: 25px;
+            width: 25px;
+            transform: translate(-6px, 35px);
+          }
+          &__stick {
+            height: 70px;
+            border-bottom-left-radius: 4px;
+            border-bottom-right-radius: 4px;
+            transform: translateY(30px);
+          }
+          @keyframes ballColorChange {
+            0%,
+            100% {
+              background: linear-gradient(
+                rgb(255, 106, 106) 0%,
+                rgb(155, 4, 4) 100%
+              );
+            }
+            50% {
+              background: linear-gradient(
+                rgb(255, 69, 69) 0%,
+                rgb(155, 4, 4) 100%
+              );
+              transform: translate(-6px, 50px);
+            }
+          }
+
+          @keyframes stickShorten {
+            0% {
+              height: 70px;
+              transform: translateY(30px);
+              background: linear-gradient(
+                to right,
+                #808080,
+                #8f8f8f,
+                #9e9e9e,
+                #aeaeae,
+                #bebebe,
+                #bebebe,
+                #bebebe,
+                #bebebe,
+                #aeaeae,
+                #9e9e9e,
+                #8f8f8f,
+                #808080
+              );
+            }
+            50% {
+              height: 80px;
+              transform: translateY(25px);
+              background: linear-gradient(
+                to right,
+                #808080,
+                #8d8d8d,
+                #9a9a9a,
+                #a7a7a7,
+                #b4b4b4,
+                #b4b4b4,
+                #b4b4b4,
+                #b4b4b4,
+                #a7a7a7,
+                #9a9a9a,
+                #8d8d8d,
+                #808080
+              );
+            }
+          }
+        }
+      }
+
+      .bottom {
+        height: 7px;
+        width: 244px;
+        padding: 0.25 * $icon_height;
+        margin-left: 1rem;
+
+        .ticket {
+          width: 240px;
+
+          p {
+            font-size: 1rem;
+            max-width: 200px;
+          }
+        }
+      }
+    }
   }
 }
